kinda fixed phone spacing

--- a/style.css
+++ b/style.css
@@ -110,7 +110,6 @@ body {
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto;
     background-color: rgba(0, 0, 0, 0.7);
     /* border: 2px solid green; */
   }
@@ -141,12 +140,11 @@ body {
 }
 .modal-series {
   display: none;
-  justify-content: space-evenly;
+  justify-content:space-evenly;
   /* border: 2px solid red; */
 }
 .modal-series img{
   margin: 0; /* Remove any previous margin */
-  display: flex;
   flex-direction: row;
   justify-content: center;
   width: 100px;
@@ -187,8 +185,21 @@ body {
 .modal-content.empty{
   max-height: 450px;
 }
+@media screen and (max-width: 400px){
+  .modal-content{
+    flex: 1;
+    overflow-y: scroll;
+    overflow-x: hidden;
+  }
+}
+@media screen and (max-width: 400px) {
+  .modal-series{
+    overflow-x: auto;
+    justify-content: start;
+  }
+}
 /* Modal content styling for larger screens */
-@media (min-width: 1000px) {
+@media screen and (min-width: 1000px) {
   .modal-content {
     /* width: 80%; Set a different width for larger screens */
     /* max-width: 600px; Maximum width for larger screens */
@@ -204,7 +215,6 @@ body {
      margin-bottom: 50%;
   }
 }
-
 /* Close button styling */
 .close {
   position: absolute;
